--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <i class="fa-solid fa-dragon home_text"></i>
-        <span class="home_text">Orio</span>Chain
+        <span class="home_text">Veri</span>Block
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,7 +135,7 @@
           <div class="col-md-6 item text">
             <h3 data-aos="fade-right">
               <i class="fa-solid fa-dragon"></i>
-              OrioChain
+              VeriBlock
             </h3>
             <!-- <a href="https://www.flaticon.com/free-icons/blockchain" title="blockchain icons">Blockchain icons created by photo3idea_studio - Flaticon</a> -->
             <p data-aos="zoom-in">
@@ -151,7 +151,7 @@
             <a href="#"><i class="fa-brands fa-instagram"> </i> </a>
           </div>
         </div>
-        <p class="copyright">OrioChain © 2022</p>
+        <p class="copyright">VeriBlock © 2024</p>
       </div>
 
     </footer>
