--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="description" content="Your description" />
   <meta name="author" content="Your name" />
   <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-  <meta property="og:site_name" content="OrioChain" />
+  <meta property="og:site_name" content="VeriBlock" />
   <!-- website name -->
-  <meta property="og:site" content="oriochain.com" />
+  <meta property="og:site" content="VeriBlock.com" />
   <!-- website link -->
-  <meta property="og:title" content="Orio" />
+  <meta property="og:title" content="Veri" />
   <!-- title shown in the actual shared post -->
-  <meta property="og:description" content="OrioChain Is A Website For institutions To Verify The Authenticity
+  <meta property="og:description" content="VeriBlock Is A Website For institutions To Verify The Authenticity
     Of Your Documents Online Easily And Safely. Let's Go.." />
   <!-- description shown in the actual shared post -->
   <meta property="og:image" content="https://blockhcain-project-ali.on.drv.tw/DevAli/assets/images/home5.jpg" />
@@ -25,7 +25,7 @@
   <!-- to have large image post format in Twitter -->
 
   <!-- Webpage Title -->
-  <title>OrioChain</title>
+  <title>VeriBlock</title>
   <link rel="stylesheet" href="./css/loader.css">
   <link href="./css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -55,7 +55,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <i class="fa-solid fa-dragon home_text"></i>
-        <span class="home_text">Orio</span>Chain
+        <span class="home_text">Veri</span>Block
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@
         into your Organization
       </h1>
       <p class="para  py-3">
-        The OrioChain platform is a leading Document Verification platform <br>
+        The VeriBlock platform is a leading Document Verification platform <br>
         designed to bring efficiency and security to your operations.
       </p>
 
@@ -116,7 +116,7 @@
           <img src="files/undraw_investment_data_re_sh9x.svg" width="150">
           <h4 class="py-3">Less Cost</h4>
           <p class="para-light">
-            with OrioChain uploading any document cost only <span class="text-warning"> 0.01 &dollar; 😮</span>
+            with VeriBlock uploading any document cost only <span class="text-warning"> 0.01 &dollar; 😮</span>
             so you can upload without caring about the Operation cost
           </p>
         </div>
@@ -265,11 +265,11 @@
         <div class="col-md-6 item text">
           <h3 data-aos="fade-right">
             <i class="fa-solid fa-dragon"></i>
-            OrioChain
+            VeriBlock
           </h3>
           <!-- <a href="https://www.flaticon.com/free-icons/blockchain" title="blockchain icons">Blockchain icons created by photo3idea_studio - Flaticon</a> -->
           <p data-aos="zoom-in">
-            The OrioChain platform is a leading Document Verification platform
+            The VeriBlock platform is a leading Document Verification platform
             designed to bring efficiency and security to your operations.
           </p>
         </div>
@@ -279,7 +279,7 @@
           <a href="#"><i class="fa-brands fa-instagram"> </i> </a>
         </div>
       </div>
-      <p class="copyright">OrioChain © 2022</p>
+      <p class="copyright">VeriBlock © 2024</p>
     </div>
 
   </footer>
